# thesis_bow_

./: .app.py.2499497951~  .gitignore  .replit  BOW_algorithmcourse.py  BOW_algorithmfav.py  BOW_algorithminterests.py  BOW_education.py  Dockerfile  README.md  TFIDF_algorithmcourse.py  TFIDF_algorithmfav.py  TFIDF_algorithminterests.py  TFIDF_education.py  algorithm.py  algorithminterests.py  app.py  database.py  email_part.py  pyproject.toml  requirements.txt
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.2.1-py3-none-any/pip-23.2.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-68.0.0-py3-none-any/setuptools-68.0.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.41.0-py3-none-any/wheel-0.41.0.dist-info/: RECORD
src/: App_design.excalidraw
src/scrapen/: scrapen.py
templates/: banner.html  best.html  bootstrap.html  carousel.html  carousel_edu.html  compulsory.html  courseitem.html  courseitemcar.html  courseitemedu.html  coursepage.html  courses.html  edurec.html  explore.html  favorites.html  favourites.html  favrec.html  filter.html  footer.html  home.html  inlogpage.html  interests.html  interestsfav.html  interestsrec.html  mobile_error.html  navbar.html  participate.html  participation2.html  search_results.html  signin.html  star.html  star_best.html  star_carousel.html  star_compulsory.html  star_education.html  star_explore.html  star_favorite.html  star_result.html  star_viewed.html  state_interests.html  test.html  (+2 more)
